--- a/css/styles.css
+++ b/css/styles.css
@@ -324,10 +324,14 @@ main {
 }
 
 .calculator {
+  position: relative;
   background-color: #fff;
-  padding: 3rem 1rem;
+  padding: 4rem 1rem 3rem;
   text-align: center;
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+.calculator__image {
+  width: 20rem;
 }
 .calculator__icon {
   display: block;
@@ -344,7 +348,7 @@ main {
 }
 .calculator__date {
   display: block;
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
 }
 
 .calculator__btn {
@@ -450,7 +454,7 @@ main {
   padding: 1.25rem 1.5rem;
   border-radius: 1px;
   background-color: #17a2b8;
-  margin-bottom: 5rem;
+  margin: 3rem 0;
   transition: all 0.2s;
 }
 #redirect-link:hover {
