--- a/css/styles.css
+++ b/css/styles.css
@@ -495,6 +495,14 @@ main {
   left: 50%;
   transform: translateX(-50%);
 }
+input[type="file"] {
+  display: none;
+}
+.file__label {
+  background-color: var(--info);
+  color: #fff;
+  padding: 1rem;
+}
 @media screen and (max-width: 85rem) {
   .navigation__link.desktop {
     display: none;
