--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 :root {
   --main-background: #f4f6f9;
   --nav-color: rgba(0, 0, 0, 0.5);
@@ -20,6 +27,7 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 html {
@@ -45,8 +53,14 @@ header {
   background-color: #fff;
 }
 .navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 0 7rem;
   margin: 0 auto;
@@ -58,6 +72,8 @@ header {
 }
 .navigation__menu {
   list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .navigation__link,
@@ -116,8 +132,9 @@ header {
   margin: 3rem 0;
 }
 .input-wrapper__options {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
   gap: 4rem;
 }
 input[type="radio"] {
@@ -134,6 +151,7 @@ input[type="radio"] {
   margin-bottom: 1rem;
   text-align: center;
   position: relative;
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 input[type="radio"]:checked + .option__label {
@@ -151,10 +169,13 @@ input[type="radio"]:checked + .option__label::after {
   position: absolute;
   top: -25px;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   height: 50px;
   width: 50px;
   line-height: 50px;
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 .option__label h3 {
@@ -164,12 +185,15 @@ input[type="radio"]:checked + .option__label::after {
   min-height: 10rem;
   overflow: hidden;
   text-align: center;
+  display: -ms-grid;
   display: grid;
   place-items: center;
+  margin-bottom: 2rem;
 }
 .option__image {
   height: auto;
-  width: 20rem;
+  width: 100%;
+  max-width: 20rem;
   display: block;
 }
 
@@ -182,6 +206,8 @@ form button {
   text-transform: uppercase;
   font-weight: 700;
   color: #fff;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
   transition: all 0.2s;
   background-color: var(--primary);
 }
@@ -190,6 +216,8 @@ form button:focus {
   background-color: var(--primary-hover);
 }
 form button:active {
+  -webkit-transform: translateY(1px);
+  -ms-transform: translateY(1px);
   transform: translateY(1px);
 }
 /* ##### END INDEX FORM ##### */
@@ -199,6 +227,7 @@ form button:active {
   margin: 3rem auto 5rem;
   width: 100%;
   background-color: #fff;
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   padding: 2rem;
   position: relative;
@@ -230,8 +259,11 @@ form button:active {
 .calculator-option {
   margin: 1rem 0;
   display: -ms-grid;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
@@ -256,6 +288,8 @@ form button:active {
   overflow: hidden;
   background-color: var(--sidebar);
   color: var(--sidebar-text);
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
   transition: all 0.3s;
 }
 .sidebar.active {
@@ -273,7 +307,11 @@ form button:active {
   right: 0;
 }
 .sidebar__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   padding: 2rem 1rem;
   border-bottom: 1px solid var(--sidebar-border);
@@ -292,12 +330,18 @@ form button:active {
   margin-top: 2rem;
 }
 .sidebar__menu-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   overflow: hidden;
   padding: 1rem;
   white-space: nowrap;
   text-decoration: none;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
   transition: all 0.2s;
   color: #c2c7d0;
 }
@@ -328,6 +372,7 @@ main {
 /* ##### CALCULATORS ##### */
 
 .calculator__wrapper {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 4rem;
@@ -338,6 +383,7 @@ main {
   background-color: #fff;
   padding: 4rem 1rem 3rem;
   text-align: center;
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
 }
 .calculator__image {
@@ -397,12 +443,12 @@ main {
 
 .edit-icon {
   color: var(--info);
-  padding: 1rem;
+  padding: 1rem 0.5rem;
   cursor: pointer;
 }
 .delete-icon {
   color: var(--delete);
-  padding: 1rem;
+  padding: 1rem 0.5rem;
 }
 .form label {
   font-weight: 700;
@@ -420,7 +466,7 @@ main {
 .edit-form__icons {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 0.5rem;
   font-size: 2rem;
 }
 .active .edit-form__icons,
@@ -430,6 +476,7 @@ main {
 .edit-form__option {
   padding: 1.5rem 2rem;
   border: 1px solid var(--input-border);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.125), 0 1px 3px rgba(0, 0, 0, 0.2);
   position: relative;
 }
@@ -442,7 +489,7 @@ main {
   display: none;
 }
 .edit-form__option .edit-form__icons {
-  right: 1rem;
+  right: 1.5rem;
 }
 .active button {
   display: inline-block;
@@ -460,6 +507,8 @@ main {
   border-radius: 1px;
   background-color: var(--primary);
   margin: 3rem 0;
+  -webkit-transition: all 0.2s;
+  -o-transition: all 0.2s;
   transition: all 0.2s;
 }
 #redirect-link:hover {
@@ -511,6 +560,8 @@ main {
   position: absolute;
   top: -4.5rem;
   left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   margin: 0;
 }
@@ -538,12 +589,15 @@ input[type="file"] {
   width: 100%;
   padding: 2rem 1rem;
 }
-@media screen and (max-width: 85rem) {
+@media screen and (max-width: 850px) {
   .navigation__link.desktop {
     display: none;
   }
+  .edit-form__option {
+    width: 17rem;
+  }
 }
-@media screen and (max-width: 55rem) {
+@media screen and (max-width: 550px) {
   .navigation-admin,
   main,
   .navigation {
@@ -557,5 +611,10 @@ input[type="file"] {
   }
   .sidebar.active {
     opacity: 1;
+  }
+}
+@media screen and (max-width: 425px) {
+  .edit-form__option {
+    width: 100%;
   }
 }
